todo-flask-sqlite/todoapplication-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  labels:
    io.kompose.service: todoapplication
  name: todoapplication
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: todoapplication
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.22.0 (955b78124)
      labels:
        io.kompose.network/lan_network: "true"
        io.kompose.service: todoapplication
    spec:
      containers:
        - image: systemdevformations/todo-sqlite
          name: todoapplication
          ports:
            - containerPort: 5000
          resources: {}
          volumeMounts:
            - mountPath: /opt/data
              name: sqlite-dir
      hostname: todo
      restartPolicy: Always
      volumes:
        - name: sqlite-dir
          persistentVolumeClaim:
            claimName: pvc-one
