todo-flask-sqlite/todoapplication-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  labels:
    io.kompose.service: todoapplication
  name: todoapplication
spec:
  type: LoadBalancer
  ports:
    - name: "port"
      port: 5000
  selector:
    io.kompose.service: todoapplication
